tests/Houtamelo.Spire.Analyzers.Tests/SPIRE001/cases/Detect_RecordStruct_ArrayPoolRent.cs
//@ should_fail
// Ensure that SPIRE001 IS triggered when calling ArrayPool.Rent with a record struct.
public class Detect_RecordStruct_ArrayPoolRent
{
    public void Method()
    {
        var arr = ArrayPool<EnforceInitializationRecordStruct>.Shared.Rent(5); //~ ERROR
    }
}
